<resources>
    <string name="app_name">Trackster</string>
    <string name="title_activity_track_performance">TrackPerformanceActivity</string>
    <string name="ranking_title">Gesamtpunkte</string>
    <string name="not_logged_in">"Not logged in!"</string>
    <string name="error_student_list">"Error while loading students list!"</string>
    <string name="error_login">Login failed!</string>
    <string name="stopwatch_starttime">00:00:00</string>
    <string name="sport_60m">60m</string>
    <string name="sport_1000m">1000m</string>
    <string name="sport_jump">Weitsprung</string>
    <string name="sport_rounders">Schlagball</string>
</resources>
