...
    android:padding="10dp"
    tools:context="at.sw2017.trackster.LoginActivity">



    <TextView
        android:id="@+id/textView_headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Schülerauswahl"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
...
            android:layout_weight=".20"
            android:text="Schüler"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/button_add_student"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".10"
            android:background="@color/colorBackgroundLight"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
...
