<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_student"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="at.sw2017.trackster.StudentActivity">


    <LinearLayout
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:layout_marginTop="60sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="97dp"
            android:layout_height="64dp"
            android:text="Class"
            android:textIsSelectable="false"
            android:textSize="24dp" />

        <Spinner
            android:id="@+id/spinnerGrade"
            android:layout_width="79dp"
            android:layout_height="69dp"/>

        <Spinner
            android:id="@+id/spinnerClass"
            android:layout_width="79dp"
            android:layout_height="69dp"
            android:padding="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/editText2"
            android:layout_width="110dp"
            android:layout_height="59dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Surname" />

        <EditText
            android:id="@+id/editSurename"
            android:layout_width="110dp"
            android:layout_height="59dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/editText3"
            android:layout_width="110dp"
            android:layout_height="59dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Forename" />


        <EditText
            android:id="@+id/editForename"
            android:layout_width="110dp"
            android:layout_height="59dp" />

    </LinearLayout>




    <LinearLayout
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="0.2"
        android:id="@+id/gebDate"
        android:layout_width="wrap_content"
        android:layout_height="0dp"

        >

        <TextView
            android:id="@+id/gebDateLabel"
            android:layout_width="110dp"
            android:layout_height="59dp"
            android:text="GebDat.:" />


        <EditText
            android:id="@+id/gebDateText"
            android:layout_width="120dp"
            android:hint="dd-mm-yyyy"
            android:layout_height="59dp" />


    </LinearLayout>


    <LinearLayout
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:layout_marginLeft="30sp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="157dp"
            android:layout_height="54dp"
            android:checked="true"
            android:text="Female" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="143dp"
            android:layout_height="54dp"
            android:checked="true"
            android:text="Male" />

    </LinearLayout>


    <Button
        android:id="@+id/button_ok"
        android:layout_width="189dp"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="20sp"
        android:text="Ok"
        android:textSize="40dp" />

</LinearLayout>
